# STACKAI_Backend_VectorDB

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.test  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
scripts/: benchmark.py  seed_data.py
src/api/: main.py
src/api/v1/: dependencies.py
src/api/v1/routers/: chunks.py  documents.py  libraries.py  search.py
src/core/: __init__.py  config.py  exceptions.py
src/core/services/: __init__.py  chunk_service.py  document_service.py  library_service.py  search_service.py
src/domain/: __init__.py  enums.py
src/domain/models/: __init__.py  chunk.py  document.py  library.py
src/infrastructure/concurrency/: __init__.py  rwlock.py
src/infrastructure/indexes/: __init__.py  base.py  brute_force.py  hnsw.py  lsh.py
src/infrastructure/persistence/: __init__.py  disk_storage.py  memory_storage.py  storage.py
src/infrastructure/repositories/: __init__.py  base.py  chunk_repository.py  document_repository.py  library_repository.py
src/schemas/: __init__.py  chunk.py  document.py  library.py  search.py
src/utils/: __init__.py  embeddings.py  math_utils.py  validators.py
tests/: conftest.py
tests/integration/: test_e2e_workflows.py
tests/integration/test_api/: test_chunks.py  test_documents.py  test_libraries.py  test_search.py
tests/unit/: test_rwlock.py  test_storage.py  test_utils.py
tests/unit/test_indexes/: test_brute_force.py  test_hnsw.py  test_lsh.py
